<resources>
    <string name="app_name">Diboson</string>
    <string name="action_settings">Not In Use</string>
    <string name="hello_world">This is a test</string>
    <string name="menu_graphics">Graphics</string>
    <string name="menu_call">Phone Call</string>
    <string name="menu_set_number">Set Phone Number</string>
    <string name="menu_URL">Web Page</string>
    <string name="menu_record">Record</string>
    <string name="menu_track_mode">Track Mode</string>
    <string name="menu_exit">Exit this App</string>
    <string name="title_activity_child_">Child Activity</string>
    <string name="title_activity_falls_activity">Falls Activity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_falls">FallsActivity</string>
    <string name="MusclesForCharity">Muscles\nFor\nCharity</string>
    <string name="x_coordinate_label">X Coordinate : </string>
    <string name="y_coordinate_label">Y Coordinate : </string>
    <string name="z_coordinate_label">Z Coordinate : </string>
    <string name="value_pointer_label">Value Pointer :</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_audio_recorder">Audio Recorder</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="recorder_info">To start recording\nPress \'Record\'\nTo stop recording\nPress \'Stop\'</string>
    <string name="debug_info">Debug Info</string>
    <string name="title_activity_video_recorder">Video Recorder</string>
    <string name="menu_audio_recorder">Record Audio</string>
    <string name="menu_video_recorder">Record Video</string>
    <string name="title_activity_start_up">App Start Up Information</string>
    <string name="title_activity_graphics">Graphics Activity</string>
    <string name="title_activity_display_url">Display a Web Page</string>
    <string name="URL_To_Display">http://musclesforcharity.wordpress.com</string>
    <string name="title_activity_track">Track</string>
    <string name="track_content">Tracking\nApp</string>
    <string name="track_button">Track</string>
    <string name="project_directory">/DibosonCareSystem/</string>
    <string name="track_directory">TrackingDetails/</string>
    <string name="tracks_directory">Tracks/</string>
    <string name="audio_directory">audio/</string>
    <string name="video_directory">Videos/</string>
    <string name="title_activity_map">Map Activity</string>
    <string name="menu_always_play">Always Play File</string>
    <string name="title_activity_video_viewer">Display a Video</string>
    <string name="title_activity_timer">Timer Activity</string>
    <string name="menu_timers">Timers and Alarms</string>
    <string name="title_activity_alarm_service">Alarm Service</string>
    <string name="title_activity_alarm_actions">Alarm Actions</string>
    <string name="title_activity_medication">Medication Activity</string>
    <string name="title_activity_media">MediaActivity</string>
    <string name="menu_media">Media Options</string>
    <string name="title_activity_slide_show">Slide Show Activity</string>
    <string name="photos_directory">AlbumPhotos/</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="menu_help">Help Instructions</string>
    <string name="menu_torch">Torch</string>
    <string name="title_activity_game_one">Game One</string>
    <string name="menu_game_one">Game One</string>
    <string name="title_activity_wait">Wait Activity</string>
    <string name="title_activity_grid">Grid Activity</string>
    <string name="menu_grid_view">Grid View of Tasks</string>
    <string name="title_activity_game_two">Game Two</string>
    <string-array name="medication_type">
        <item>Tablet</item>
        <item>Liquid</item>
        <item>Ointment</item>
    </string-array>
    <string-array name="medication_type_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="medication_type_title">Medication Type</string>
    <string name="medication_details">Medication Details</string>
    <string name="medication_details_default">You must enter the details</string>
    <string name="medication_header_type">Medication Type</string>
    <string name="medication_administration_title">Administration of Medicine</string>
    <string name="medication_dosage_title">Medicine Dosage</string>
    <string-array name="medication_dosage_form">
        <item>Tablet</item>
        <item>ml (millilitres)</item>
    </string-array>
    <string-array name="medication_dosage_form_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="medication_days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="medication_days_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="title_activity_carer">Carer Activity</string>
    <string name="title_activity_medication_input">Medication Input Details</string>
    <string name="title_activity_disk_handling">Device Cloning Utility</string>
    <string name="medication_details_file">MedicationDetails</string>
    <string name="voice_command_phrases_file">VoiceCommandPhrases</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="title_activity_smshandler">SMS Handler</string>
    <string name="title_activity_music_player">Diboson Music Player</string>
    <string name="music_root_folder">/sdcard/Music</string>
    <string name="default_dose">1.0</string>
    <string name="select_time_dose">Select the Time for This Dose</string>
    <string name="enter_dose_take">Enter the Dose To Take</string>
    <string name="enter_units_dose">Enter the Units of the Dose</string>
    <string name="enter_notes">Enter any Notes</string>
    <string name="enter_dose_settings">Enter your Dose Settings</string>
    <string name="all_doses_entered">All Doses Entered for This Day</string>
    <string name="enter_name_medication">Enter Name of Medication</string>
    <string name="enter_description_medication">Enter Description of the Medication</string>
    <string name="enter_file_name_photo">Enter File Name for Photo</string>
    <string name="select_form_medication">Select the Form of the Medication</string>
    <string name="click_select_photo_list">Click to select photo from a list</string>
    <string name="enter_information">Enter the Information</string>
    <string name="no_more_medication_enter">No More Medication To Enter</string>
    <string name="ointment">Ointment</string>
    <string name="tablet">Tablet</string>
    <string name="liquid">Liquid</string>
    <string name="spray">Spray</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="select_days_doses">Select the Days for Doses</string>
    <string name="smtp_server">smtp.live.com</string>
    <string name="smtp_user_name">diboson@hotmail.co.uk</string>
    <string name="smtp_email_receiver">ebmusher@aol.com</string>
    <string name="smtp_port_number">587</string>
    <string name="select_smtp_server">Please Input the SMTP Server</string>
    <string name="select_smtp_port">Please Input the SMTP Port</string>
    <string name="select_smtp_username">Please Input the User Name</string>
    <string name="select_smtp_password">Please Input the Associated Password</string>
    <string name="select_smtp_recipients">Please Input SMTP Recipients</string>
    <string name="smtp_accept_details">Press to Accept the Values</string>
    <string name="smtp_set_defaults">Set the Default Setting</string>
    <string name="medication_delete_button">Delete this Medication</string>
    <string name="medication_reset_button">Reset associated Times</string>
    <string name="menu_logcat">Display LogCat Entries</string>
    <string name="menu_logcat_condensed">LogCat</string>
    <string name="menu_project_log">Display the Project Log</string>
    <string name="menu_project_log_condensed">Display Project Log</string>
    <string name="menu_system_info">Display System Information</string>
    <string name="menu_system_info_condensed">Display System Info</string>
    <string name="menu_logcat_latest">Display LogCat - Latest First</string>
    <string name="menu_logcat_latest_condensed">LogCat - Latest</string>
    <string name="menu_logcat_clear">Clear LogCat</string>
    <string name="menu_logcat_clear_condensed">Clear LogCat</string>
    <string name="menu_project_log_clear">Clear Project Log</string>
    <string name="menu_project_log_clear_condensed">Clear Project Log</string>
    <string name="client">Connect to a TCP Server</string>
    <string name="send_datagram">Send Datagram</string>
    <string name="Broadcast">Broadcast</string>
    <string name="network_discovery">Network Discovery</string>
    <string name="transmit_buffer">Transmit the Specified File</string>
    <string name="remote_streaming_device">Set the Remote Streaming Device</string>
    <string name="set_device_name">Set Device Name</string>
    <string name="hint_dose_time_units">Enter the Units of the Dose</string>
    <string name="set_clone_mode">Place Device into Clone Mode</string>
    <string name="transmit_clone_mode">Clone Files To A Device</string>
    <string name="blank_textview"></string>
    <string name="delete_dose">Delete this Dose</string>
    <string name="auto_scroll_enable">Enable Auto Scrolling</string>
    <string name="menu_logcat_write">Write LogCat to File</string>
    <string name="menu_logcat_write_condensed">Write LogCat to File</string>
    <string name="menu_logcat_filter">Enter LogCat Filter</string>
    <string name="menu_logcat_filter_condensed">Enter LogCat Filter</string>
    <string name="panic_alarm_enable">Enable Panic Alarm</string>
    <string name="panic_alarm_start">Set Start Time</string>
    <string name="panic_alarm_end">Set End Time</string>
    <string name="panic_alarm_interval">Set Interval between Prompts</string>
    <string name="panic_alarm_response">Set the Response Time</string>
    <string name="panic_alarm_actions">Set the Alarm Commands</string>
    <string name="panic_alarm_prompts">Set the Prompt Commands</string>
    <string name="panic_alarm_security">"Set Security "</string>
    <string name="panic_alarm_response_actions">Set the Response Commands</string>
    <string name="menu_alarm_data">Display the Alarm Data</string>
    <string name="send_hello_message">Send HELLO Message</string>
    <string name="monitor_a_device">Monitor a Device</string>
    <string name="group_delete_all">Delete all Groups</string>
    <string name="group_delete">Delete A Group</string>
    <string name="group_display">Display A Group</string>
    <string name="group_create">Create A Group</string>
    <string name="group_redefine">Redefine A Group</string>
    <string name="request_device_details">Request Device Details</string>
    <string name="menu_bugs">Details of Known Bugs</string>
    <string name="menu_notes">Display Notes</string>
</resources>