<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/diboson_bw_edge"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

     <TextView
         style="@style/customTextView"
         android:layout_marginBottom="@dimen/default_font_size"
         android:layout_marginTop="@dimen/default_font_size"
         android:text="@string/select_time_dose"/>
    
    <TimePicker
        android:id="@+id/dose_time_timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    
    <TextView
        style="@style/customTextView"
        android:text="@string/enter_dose_take" />
    
    <EditText
        android:id="@+id/dose_time_amount"
        style="@style/customEditText"
        android:ems="10"
        android:inputType="numberDecimal|number"
        android:text="@string/default_dose" >
        <requestFocus />
    </EditText>
    
    <TextView
        style="@style/customTextView"
        android:text="@string/enter_units_dose" />
    
    <EditText
        android:id="@+id/dose_time_units"
        style="@style/customEditText"
        android:ems="10"
        android:hint="@string/hint_dose_time_units"
        android:text="@string/tablet" />
    
    <TextView
        style="@style/customTextView"
        android:text="@string/enter_notes" />
    
    <MultiAutoCompleteTextView
        android:id="@+id/dose_time_notes"
        style="@style/customEditText"
        android:background="@drawable/inputfield"
        android:ems="10" />

    <Button
        android:id="@+id/dose_time_enter"
        style="@style/customButton"
        android:layout_marginTop="@dimen/default_font_size"
        android:text="@string/enter_dose_settings"/>

    <Button
        android:id="@+id/dose_time_finish"
        style="@style/customButton"
        android:text="@string/all_doses_entered" />
    
     <Button
         android:id="@+id/dose_time_delete"
         style="@style/customButton"
         android:text="@string/delete_dose" />
    
</LinearLayout>

</ScrollView>