<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/diboson_bw_edge"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TCPActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

   			 <Button
   			     android:id="@+id/tcp_client_button"
   			     style="@style/customButton"
   			     android:layout_marginTop="@dimen/default_font_size"
   			     android:text="@string/client" />

    		<Button
    		    android:id="@+id/tcp_datagram_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size"
    		    android:text="@string/send_datagram" />

    		<Button
    	    	android:id="@+id/tcp_broadcast_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/Broadcast" />
    	
    		<Button
    	   		android:id="@+id/tcp_send_hello_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/send_hello_message" />
   
    		<Button
    	    	android:id="@+id/tcp_discover_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/network_discovery" />
    
    		<Button
    	    	android:id="@+id/tcp_transmit_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/transmit_buffer" />
    	
    		<Button
    	    	android:id="@+id/remote_streaming_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/remote_streaming_device" />
    	
    		<Button
    		    android:id="@+id/device_name_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/set_device_name" />
    	
    		<Button
    		    android:id="@+id/tcp_clone_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	   	 	android:text="@string/set_clone_mode" />
    	
    		<Button
    	    	android:id="@+id/tcp_clone_transmit_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/transmit_clone_mode" />
    		
    		<Button
    		    android:id="@+id/tcp_monitor_a_device_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size"
    		    android:text="@string/monitor_a_device"/>
    		
    		<Button
    		    android:id="@+id/tcp_request_device_details_button"
    		    style="@style/customButton"
    		    android:layout_marginBottom="@dimen/default_font_size"
    		    android:layout_marginTop="@dimen/default_font_size"
    		    android:text="@string/request_device_details" />
    	
		</LinearLayout>     

</ScrollView>