<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/diboson_bw_edge"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >
            
    <TextView
        android:id="@+id/SMTPServerTitle"
        style="@style/customTextView"
        android:layout_marginTop="@dimen/default_font_size"
        android:text="@string/select_smtp_server" />

    <EditText
        android:id="@+id/SMTPServerInput"
        style="@style/customEditText"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/smtp_server" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/SMTPPortTitle"
        style="@style/customTextView"
        android:text="@string/select_smtp_port" />

    <EditText
        android:id="@+id/SMTPPortInput"
        style="@style/customEditText"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/smtp_port_number"
        android:inputType="number" />

    <TextView
        android:id="@+id/SMTPUserNameTitle"
        style="@style/customTextView"
        android:layout_alignLeft="@+id/SMTPPortInput"
        android:layout_below="@+id/SMTPPortInput"
        android:text="@string/select_smtp_username" />

    <EditText
        android:id="@+id/SMTPUserNameInput"
        style="@style/customEditText"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/smtp_user_name"/>

    <TextView
        android:id="@+id/SMTPPasswordTitle"
        style="@style/customTextView"
        android:text="@string/select_smtp_password" />

    <EditText
        android:id="@+id/SMTPPasswordInput"
        style="@style/customEditText"
        android:background="@drawable/inputfield"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/SMTPRecipientsTitle"
        style="@style/customTextView"
        android:text="@string/select_smtp_recipients"
        android:textSize="@dimen/default_font_size" />

    <EditText
        android:id="@+id/SMTPRecipientsInput"
        style="@style/customEditText"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:hint="@string/smtp_email_receiver" />

    <Button
        android:id="@+id/SMTPButton"
        style="@style/customButton"
        android:layout_marginTop="@dimen/default_font_size"
        android:text="@string/smtp_accept_details" />

    <Button
        android:id="@+id/SMTPSetDefaultsButton"
        style="@style/customButton"
        android:text="@string/smtp_set_defaults" />

</LinearLayout>

</ScrollView>