
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/diboson_bw_edge"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PanicAlarmActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

    		<Button
    		    android:id="@+id/panic_alarm_start_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size"
    		    android:text="@string/panic_alarm_start" />
    		
    		<Button
    		    android:id="@+id/panic_alarm_end_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size_smaller"
    		    android:text="@string/panic_alarm_end" />
    		
    		<Button
    		    android:id="@+id/panic_alarm_interval_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size_smaller"
    		    android:text="@string/panic_alarm_interval" />
    		
    		<Button
    		    android:id="@+id/panic_alarm_response_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size_smaller"
    		    android:text="@string/panic_alarm_response" />
    		
    		<Button
    		    android:id="@+id/panic_alarm_prompts_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size_smaller"
    		    android:text="@string/panic_alarm_prompts" />
    		
    		 <Button
    		     android:id="@+id/panic_alarm_response_actions_button"
    		     style="@style/customButton"
    		     android:layout_marginTop="@dimen/default_font_size_smaller"
    		     android:text="@string/panic_alarm_response_actions" />
    		 
    		<Button
    		    android:id="@+id/panic_alarm_actions_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size_smaller"
    		    android:text="@string/panic_alarm_actions" />
    		
    		<Button
    		    android:id="@+id/panic_alarm_security_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size_smaller"
    		    android:text="@string/panic_alarm_security" />
    		
   			<Button
   			    android:id="@+id/panic_alarm_enable_button"
   			    style="@style/customButton"
   			    android:layout_marginTop="@dimen/default_font_size_smaller"
   			    android:text="@string/panic_alarm_enable" />
    				
		</LinearLayout>     

</ScrollView>