<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/diboson_bw_edge"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GroupActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

   			 <Button
   			     android:id="@+id/group_display_button"
   			     style="@style/customButton"
   			     android:layout_marginTop="@dimen/default_font_size"
   			     android:text="@string/group_display" />

    		<Button
    		    android:id="@+id/group_create_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size"
    		    android:text="@string/group_create" />

    		<Button
    	    	android:id="@+id/group_delete_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/group_delete" />
    		
    		<Button
    	    	android:id="@+id/group_redefine_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/group_redefine" />
    		
    		<Button
    	    	android:id="@+id/group_delete_all_button"
    	    	style="@style/customButton"
    	    	android:layout_marginTop="@dimen/default_font_size"
    	    	android:text="@string/group_delete_all" />
    		
    		<Button
    		    android:id="@+id/group_enable_button"
    		    style="@style/customButton"
    		    android:layout_marginTop="@dimen/default_font_size"
    		    android:text="@string/blank_textview" />
    	
		</LinearLayout>     

</ScrollView>
